--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,27 @@
 *.trs
 *.deps
 *.la
+tests
+ssl/.libs/
 Makefile
+apps/.libs/
+apps/Makefile
+apps/openssl
+autom4te.cache/
+config.status
+configure.ac~
+configure.scan
+crypto/.libs/
+crypto/Makefile
+include/Makefile
+include/openssl/Makefile
+libcrypto.pc
+libssl.pc
+libtool
+man/Makefile
+openssl.pc
+ssl/.libs/
+ssl/Makefile
+aclocal.m4
+configure
+configure.ac
