--- a/crypto/Makefile.am
+++ b/crypto/Makefile.am
@@ -412,6 +412,7 @@ libcrypto_la_SOURCES += evp/e_old.c
 libcrypto_la_SOURCES += evp/e_rc2.c
 libcrypto_la_SOURCES += evp/e_rc4.c
 libcrypto_la_SOURCES += evp/e_rc4_hmac_md5.c
+libcrypto_la_SOURCES += evp/e_simon.c
 libcrypto_la_SOURCES += evp/e_xcbc_d.c
 libcrypto_la_SOURCES += evp/encode.c
 libcrypto_la_SOURCES += evp/evp_aead.c
@@ -571,6 +572,7 @@ libcrypto_la_SOURCES += sha/sha512.c
 libcrypto_la_SOURCES += sha/sha_dgst.c
 libcrypto_la_SOURCES += sha/sha_one.c
 noinst_HEADERS += sha/sha_locl.h
+libcrypto_la_SOURCES += simon/simon.c
 libcrypto_la_SOURCES += stack/stack.c
 libcrypto_la_SOURCES += ts/ts_asn1.c
 libcrypto_la_SOURCES += ts/ts_conf.c
@@ -656,3 +658,4 @@ noinst_HEADERS += x509v3/pcy_int.h
 EXTRA_libcrypto_la_SOURCES += des/ncbc_enc.c
 EXTRA_libcrypto_la_SOURCES += chacha/chacha-merged.c
 EXTRA_libcrypto_la_SOURCES += poly1305/poly1305-donna.c
+EXTRA_libcrypto_la_SOURCES += simon/simon-merged.c
