--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -209,6 +209,11 @@ check_PROGRAMS += shatest
 shatest_SOURCES = shatest.c
 shatest_LDADD = $(top_builddir)/ssl/libssl.la
 shatest_LDADD += $(top_builddir)/crypto/libcrypto.la
+TESTS += simontest
+check_PROGRAMS += simontest
+simontest_SOURCES = simontest.c
+simontest_LDADD = $(top_builddir)/ssl/libssl.la
+simontest_LDADD += $(top_builddir)/crypto/libcrypto.la
 check_PROGRAMS += ssltest
 ssltest_SOURCES = ssltest.c
 ssltest_LDADD = $(top_builddir)/ssl/libssl.la
