--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -92,9 +92,9 @@ TESTS = $(am__append_1) aes_wrap$(EXEEXT) asn1test$(EXEEXT) \
 	poly1305test$(EXEEXT) randtest$(EXEEXT) rc2test$(EXEEXT) \
 	rc4test$(EXEEXT) rmdtest$(EXEEXT) sha1test$(EXEEXT) \
 	sha256test$(EXEEXT) sha512test$(EXEEXT) shatest$(EXEEXT) \
-	simontest$(EXEEXT) \
-	timingsafe$(EXEEXT) utf8test$(EXEEXT) aeadtest.sh evptest.sh \
-	pq_test.sh ssltest.sh arc4randomforktest.sh
+	simontest$(EXEEXT) timingsafe$(EXEEXT) utf8test$(EXEEXT) \
+	aeadtest.sh evptest.sh pq_test.sh ssltest.sh \
+	arc4randomforktest.sh
 check_PROGRAMS = aeadtest$(EXEEXT) aes_wrap$(EXEEXT) \
 	arc4randomforktest$(EXEEXT) asn1test$(EXEEXT) \
 	base64test$(EXEEXT) bftest$(EXEEXT) biotest$(EXEEXT) \
@@ -109,9 +109,8 @@ check_PROGRAMS = aeadtest$(EXEEXT) aes_wrap$(EXEEXT) \
 	poly1305test$(EXEEXT) pq_test$(EXEEXT) randtest$(EXEEXT) \
 	rc2test$(EXEEXT) rc4test$(EXEEXT) rmdtest$(EXEEXT) \
 	sha1test$(EXEEXT) sha256test$(EXEEXT) sha512test$(EXEEXT) \
-	shatest$(EXEEXT)  simontest$(EXEEXT) ssltest$(EXEEXT) \
-	timingsafe$(EXEEXT) \
-	utf8test$(EXEEXT)
+	shatest$(EXEEXT) simontest$(EXEEXT) ssltest$(EXEEXT) \
+	timingsafe$(EXEEXT) utf8test$(EXEEXT)
 @NO_ARC4RANDOM_BUF_FALSE@am__append_1 = pidwraptest.sh
 subdir = tests
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
